--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -24,12 +24,20 @@
     </build>
 
     <dependencies>
+
+        <dependency>
+            <groupId>antony.glim</groupId>
+            <artifactId>Common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.8.11.2</version>
         </dependency>
+
     </dependencies>
 
 
