--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>Server</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>antony.glim</groupId>
+            <artifactId>Common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
