--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -38,6 +38,13 @@
             <version>3.8.11.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.25.Final</version>
+        </dependency>
+
     </dependencies>
 
 
