--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,14 @@
         <module>Common</module>
     </modules>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.25.Final</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
